--- a/cart.html
+++ b/cart.html
@@ -25,10 +25,10 @@
                                 <form class="form-inline mr-auto w-100 navbar-search" >
                                     <div class="input-group">
                                         <input type="text" class="form-control bg-light border-0 small"
-                                            placeholder="Search for..." aria-label="Search"
+                                            placeholder="Search " aria-label="Search"
                                             aria-describedby="basic-addon2" style="width: 500px;">
                                         <div class="input-group-append">
-                                            <button class="btn btn-primary" type="button">
+                                            <button class="" type="button" style="background-color: rgb(22, 22, 80); color: white; border: 0px;">
                                                 <i class="fas fa-search fa-sm"></i>
                                             </button>
                                         </div>
@@ -36,10 +36,10 @@
                                 </form>
                                 </div>
                                 <div style="margin-left:400px ;">
-                                <ul style="display: flex; list-style-type:none;">
-                                    <li style="margin-left: 20px;"><a href="#">Home</a></li>
-                                    <li style="margin-left: 20px;"><a href="#">Cart</a></li>
-                                    <li style="margin-left: 20px;"><a href="#">Account</a></li>
+                                <ul style="display: flex; list-style-type:none; ">
+                                    <li style="margin-left: 20px;"><a href="#" style="color: rgb(22, 22, 80);"><strong>Home</strong></a></li>
+                                    <li style="margin-left: 20px;"><a href="#" style="color: rgb(22, 22, 80);"><strong>Cart</strong></a></li>
+                                    <li style="margin-left: 20px;"><a href="#" style="color: rgb(22, 22, 80);"><strong>Account</strong></a></li>
                                 </ul>
                                 </div>
                             </div>
@@ -54,11 +54,11 @@
 </div>
 
 <div style="margin-top:180px; margin-left:500px">
-    <button class="btn btn-primary" type="button">
+    <button class="" type="button" style="background-color: rgb(22, 22, 80); color: white; border: 0px;">
         <i class="fas fa-angle-up fa-sm"></i>
     </button>
     <input type="text" style="width: 30px;"/>
-    <button class="btn btn-primary" type="button">
+    <button class="" type="button" style="background-color: rgb(22, 22, 80); color: white; border: 0px;">
         <i class="fas fa-angle-down fa-sm"></i>
     </button>
 <button style="background-color: red; color: white; border: 0px; width: 100px;">Remove</button>
