--- a/cart.html
+++ b/cart.html
@@ -44,16 +44,16 @@
                                 </div>
                             </div>
     
-    <div style="display:flex">
+    <div style="display:flex; border: 5px; border-color: black; padding: 10px;" >
         <div style="display:flex">
-<img src="res.png" style="height: 200px; width:200ppx;"/>
-<div style="margin-top: 60px;"><h4>Mac Book pro</h4>
+<img src="laptop.jpg" style="height: 200px; width:300ppx; margin-left: 20px;"/>
+<div style="margin-top: 60px; margin-left: 20px;"><h4>Mac Book pro</h4>
 <p>500HD, 8GB RAM <br> 7th Gen </p>
-<h5>2,500,000</h5>
+<h5>2,500,000 Ushs</h5>
 </div>
 </div>
 
-<div style="margin-top:180px; margin-left:500px">
+<div style="margin-top:160px; margin-left:500px">
     <button class="" type="button" style="background-color: rgb(22, 22, 80); color: white; border: 0px;">
         <i class="fas fa-angle-up fa-sm"></i>
     </button>
